crates/toml_edit/tests/snapshots/invalid/integer/leading-us.stderr
TOML parse error at line 1, column 14
  |
1 | leading-us = _123
  |              ^
`_` may only go between digits, expected nothing
